# processes/order/src/main/kotlin/io/miragon/zeebe/tm/order/adapter/in/rest/model/CompleteTaskDto.kt
@@ -1,0 +1,6 @@
+package io.miragon.zeebe.tm.order.adapter.`in`.rest.model
+
+data class CompleteTaskDto(
+    val userTask: UserTaskDto,
+    val formData: Any
+)
